correct alignment between title and description

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -54,6 +54,10 @@ $navbar-default-bg: #0ba845;
   margin: 10px 0 0 70px;
 }
 
+#title {
+  padding-right: 49px;
+}
+
 .footer {
   padding-top: 5px;
   border-top: 1px solid #0ba845;
